esta es la pagina prottotipo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="autor" content="emmanuel jaime">
 	<meta name="copyright" content="diceñando con la mente">
 	<meta name="robots" content="index">
-	<link rel="icon" href="C:\Users\emman\Documents\pagina web\mi logo.jpg"> 
+	<link rel="icon" href="E:\Pictures\mi cabesera de youtube.jpg"> 
 <header style="background:rgb(114, 114, 114)">
 <p><h1 style="color: rgb(255, 255, 255)"><center>
 
